--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
         </repository>
     </repositories>
 
+    <parent>
+        <groupId>dk.dbc</groupId>
+        <artifactId>microservice-pom</artifactId>
+        <version>latest-SNAPSHOT</version>
+        <relativePath/>
+    </parent>
+
     <build>
         <resources>
             <resource>
@@ -42,7 +49,7 @@
             <plugin>
                 <artifactId>exec-maven-plugin</artifactId>
                 <groupId>org.codehaus.mojo</groupId>
-                <version>1.3.2</version>
+                <version>1.6.0</version>
                 <executions>
                     <execution>
                         <id>Inline Javascript</id>
@@ -67,9 +74,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.glassfish</groupId>
-            <artifactId>javax.json</artifactId>
-            <version>1.0.4</version>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
